--- a/src/main/resources/templates/admin/notice.html
+++ b/src/main/resources/templates/admin/notice.html
@@ -71,7 +71,7 @@
                     <th class="py-2 px-4 w-auto border">작성자</th>
                     <th class="py-2 px-4 w-[200px] border">작성일자</th>
                     <th class="py-2 px-4 w-[200px] border">수정일자</th>
-                    <th class="py-2 px-4 w-auto border">수정 / 삭제</th>
+                    <th class="py-2 px-4 w-[80px] border">수정 / 삭제</th>
 
                 </tr>
                 </thead>
