--- a/src/main/resources/templates/admin/domestic.html
+++ b/src/main/resources/templates/admin/domestic.html
@@ -130,7 +130,7 @@
                     <td class="py-2 px-4 border">
                         <a th:if="${#authorization.expression('hasRole(''ROLE_SUPERADMIN'') or hasRole(''ROLE_ADMIN'')')}"
                            href="javascript:void(0);"
-                           th:data-uri="@{/product/delete/{id}(id=${product.id})}"
+                           th:data-uri="@{/deleteDomesticAd/{id}(id=${product.id})}"
                            class="text-red-500 hover:text-red-600 transition duration-300"
                            onclick="confirmDelete(event)">삭제</a>
                     </td>
