--- a/src/main/resources/templates/product/product_form.html
+++ b/src/main/resources/templates/product/product_form.html
@@ -82,10 +82,6 @@
             </div>
         </div>
 
-        <div class="mb-2">
-            <span>ISBN : </span>
-            <span th:text="${product.isbn}"></span>
-        </div>
         <div class="border-t mt-4 pt-4">
             <label>상품정보 및 내용</label>
         </div>
@@ -138,8 +134,9 @@
 
         <!-- ISBN 표시란 -->
         <div class="bg-white rounded-lg shadow p-4 mt-4">
-            <label class="block mb-1 font-medium">ISBN(International Standard Book Number / 국제 표준 도서 번호) :</label>
+            <label class="block mb-1 font-medium">BOOK_U_LUV 자체 도서ID(ISBN대체) :</label>
             <input class="w-full rounded border p-2" id="isbn" th:field="${productDto.isbn}" type="text" readonly>
+            <span class="absolute right-2 top-3 text-gray-400">자동 생성됩니다</span>
         </div>
 
         <div class="border-solid mt-4 pt-4">
