레이아웃 토글메뉴 화면 너비 조정

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -172,7 +172,7 @@
                 외국도서
             </a>
             <a href="https://reader.grb.asia/" target="_blank" class="hover:text-red-500">
-                Reader
+                 & Reader
             </a>
             <a href="/member/profile" class="inline-flex items-center" sec:authorize="isAuthenticated()">
                 <img class="fa-solid fa-user w-12 h-12 rounded-full" alt=""
