레이아웃 토글메뉴 화면 너비 조정

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -89,7 +89,7 @@
                 <a href="https://reader.grb.asia/" target="_blank" class="inline-flex hover:text-red-500 flex-shrink-0">
                     <span class="text-[#1E9EFE] ml-[2px] hidden lg:block">BOOK</span>
                     <span class="ml-[2px] hidden lg:block">U_LUV</span>
-                    <span class="ml-[2px] hidden lg:block">Reader</span>
+                    <span class="ml-[2px] lg:block">Reader</span>
                 </a>
             </div>
         </div>
@@ -172,7 +172,7 @@
                 외국도서
             </a>
             <a href="https://reader.grb.asia/" target="_blank" class="hover:text-red-500">
-                 & Reader
+                 Reader
             </a>
             <a href="/member/profile" class="inline-flex items-center" sec:authorize="isAuthenticated()">
                 <img class="fa-solid fa-user w-12 h-12 rounded-full" alt=""
