--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -27,6 +27,7 @@
 
 
 
+
     </style>
 </head>
 
@@ -70,6 +71,8 @@
         <span class="line-through text-gray-500" th:text="${product.priceStandard} + '원'"></span>
         <span>할인가 : </span>
         <span th:text="${product.priceSales} + '원'"></span>
+        <span th:text="'(' + ${100 - (product.priceSales * 100) / product.priceStandard + '%'} + ', '
+                                           + ${product.priceStandard - product.priceSales} + '원 할인)'"></span>
     </div>
     <div class="mb-2">
         <span>출간일 : </span>
@@ -192,6 +195,7 @@
 
 
 
+
         </script>
 
         <div class="border-t mt-4 pt-4">
@@ -232,10 +236,12 @@
                     <div class="flex justify-end w-full mr-[10px]">
                         <input class="form-control text-center me-3" id="amount" name="amount" type="hidden"
                                value="1" style="max-width: 3rem"/>
-                        <button class="ml-2 mr-4 px-4 py-2 w-24 btn btn-primary text-white add-to-cart-btn" type="submit">
+                        <button class="ml-2 mr-4 px-4 py-2 w-24 btn btn-primary text-white add-to-cart-btn"
+                                type="submit">
                             장바구니
                         </button>
-                        <a class="go-to-cart-btn hidden" sec:authorize="isAuthenticated()" th:href="@{/member/cart/{id}(id=${#authentication.principal.id})}">
+                        <a class="go-to-cart-btn hidden" sec:authorize="isAuthenticated()"
+                           th:href="@{/member/cart/{id}(id=${#authentication.principal.id})}">
                             장바구니로 이동
                         </a>
                     </div>
@@ -407,6 +413,7 @@
             alert('수정이 완료되었습니다.');
         }
     });
+
 
 </script>
 </body>
