레이아웃 검색창 반응형 시 표시하도록

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -94,7 +94,7 @@
             </div>
         </div>
 
-        <div class="search-box items-center space-x-2 mr-4 lg:mr-20 hidden xl:flex">
+        <div class="search-box items-center space-x-2 mr-4 lg:mr-20 xl:flex">
             <form class="flex items-center" action="#" th:action="@{/api/search}" th:method="get"
                   onsubmit="return validateSearchForm();">
                 <div class="relative flex items-center">
